# MSP43x

./: .gitignore
Code/1_MSP430_Test_Demo/: CMakeLists.txt
Code/gcc/1_MSP430_Test_Demo/: CMakeLists.txt
Code/gcc/1_MSP430_Test_Demo/src/: main.c
Note/: 1_MSP430&MSP432环境配置.md
